 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-3970: Merge Tez branch into trunk (daijy)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-3978: Container reuse does not across PigServer (daijy)

PIG-3974: E2E test data generation fails in cluster mode (lbendig via cheolsoo)

PIG-3969: Javascript UDF fails if no output schema is defined (lbendig via cheolsoo)

PIG-3971: Pig on tez fails to run in Oozie in secure cluster (rohini)

PIG-3968: OperatorPlan.serialVersionUID is not defined (daijy)

Release 0.13.0 - Unreleased
 
INCOMPATIBLE CHANGES

PIG-3898: Refactor PPNL for non-MR execution engine (cheolsoo)

PIG-3485: Remove CastUtils.bytesToMap(byte[] b) method from LoadCaster interface (cheolsoo) 

PIG-3419: Pluggable Execution Engine (achalsoni81 via cheolsoo)

PIG-2207: Support custom counters for aggregating warnings from different udfs (aniket486)

IMPROVEMENTS

PIG-3954: Document use of user level jar cache (aniket486)

PIG-3752: Fix e2e Parallel test for Windows (daijy)

PIG-3966: Document variable input arguments of UDFs (lbendig via aniket486)

PIG-3963: Documentation for BagToString UDF (mrflip via daijy)

PIG-3929: pig.temp.dir should allow to substitute vars as hadoop configuration does (aniket486)

PIG-3913: Pig should use job's jobClient wherever possible (fixes local mode counters) (aniket486)

PIG-3941: Piggybank's Over UDF returns an output schema with named fields (mrflip via cheolsoo)

PIG-3545: Seperate validation rules from optimizer (daijy)

PIG-3745: Document auto local mode for pig (aniket486)

PIG-3932: Document ROUND_TO builtin UDF (mrflip via cheolsoo)

PIG-3926: ROUND_TO function: rounds double/float to fixed number of decimal places (mrflip via cheolsoo)
