@@ -30,6 +30,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-2409: Pig show wrong tracking URL for hadoop 2 (lbendig via rohini)
+
 PIG-3978: Container reuse does not across PigServer (daijy)
 
 PIG-3974: E2E test data generation fails in cluster mode (lbendig via cheolsoo)
